--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
@@ -43,7 +43,7 @@
 			</Target>
 			<Target title="DebugWin32SharedrtDynamic">
 				<Option platforms="Windows;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCore.dll" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll.a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="0" />
+				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCore.dll" imp_lib="$(TARGET_OUTPUT_DIR)lib$(TARGET_OUTPUT_BASENAME).dll.a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				<Option type="3" />
